fixing content overlapping collapsed navbar

--- a/assets/css/teammolde.css
+++ b/assets/css/teammolde.css
@@ -6552,6 +6552,7 @@ ul.team-nav li a:active {
     position: absolute;
     top: 45px;
     right: 15px;
+    z-index: 1000;
   }
 }
 .navbar-collapse {
