--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -90,6 +90,7 @@ ul.team-nav {
 		position: absolute;
 		top: 45px;
 		right: 15px;
+		z-index: 1000;
 	}
 }
 
